src/index.css
@tailwind base;
@tailwind components;
@tailwind utilities;

.bg-gray-fill{
  background-color: #F5F7FA;
}

.nav-text-gray{
  color: #B1B1B1;
  border-left: 4px solid white;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
}

.nav-text-gray:hover{
  color: #565555;
}

.active-tab{
  color: #1814f3;
  border-left: 4px solid #1814f3;
  border-top-left-radius: 4px;
  border-bottom-left-radius: 4px;
  font-weight: bold;
}

.header-grid{
  display: grid;
  grid-template: 1fr / 50px 1fr 255px 50px 50px 60px;
  grid-template-areas: 'hpt hpt hsb hgi hbi hui';
  align-items: center;
  gap: 1rem;
}

.header-page-title{
  grid-area: hpt;
}

.header-search-box{
  grid-area: hsb;
}

.header-gear-icon{
  grid-area: hgi;
}

.header-user-image{
  grid-area: hui;
}

.header-bell-icon{
  grid-area: hbi;
}

.header-search-box input{
  border: none;
  outline: none;
}

.header-search-box input::placeholder{
  color: #718ebf;
}

.header-user-image img{
  width: 100%;
  height: 100%;
  border-radius: 50%;
  object-fit: cover;
}

.header-mobile-nav-container{
  position: fixed;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
}

/* If screen size is 600px wide, or less */
@media screen and (max-width: 600px) {
  .header-container{
    height: 140px;
  }

  .header-grid{
    grid-template: 1fr 1fr / 50px 1fr 60px;
    grid-template-areas: 
      "hbm hpt hui"
      "hsb hsb hsb"
    ;
    padding: 20px 10px;
  }

  .header-page-title{
    font-size: 24px;
    justify-content: center;
  }

  .large-screens-only{
    display: none;
  }

  .hamburger-menu{
    grid-area: hbm;
    font-size: 36px;
  }

  .header-user-image{
    width: 45px;
    height: 45px;
  }
}

@media screen and (min-width: 600px) and (max-width: 850px) {
  .hamburger-menu, .header-bell-icon, .header-gear-icon{
    display: none;
  }

  .header-grid{
    grid-template: 1fr / 1fr 1fr 60px;
    grid-template-areas: 'hpt hsb hui';
  }

  .nav-item{
    padding: 0 15px;
  }
}

